--- a/DashBoardPF/Views/Shared/_Layout.cshtml
+++ b/DashBoardPF/Views/Shared/_Layout.cshtml
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link href="chartistJS/chartist.min.css" rel="stylesheet" />
-    <script src="chartistJS/chartist.min.js"></script>
+    @*<link href="chartistJS/chartist.min.css" rel="stylesheet" />
+    <script src="chartistJS/chartist.min.js"></script>*@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
