--- a/DashBoardPF/Views/Home/Index.cshtml
+++ b/DashBoardPF/Views/Home/Index.cshtml
@@ -3,22 +3,26 @@
 }
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 <script type="text/javascript">
+
 
 
         google.charts.load('current', { 'packages': ['corechart'] });
         google.charts.setOnLoadCallback(function () {
-        var title = '@Model.Title';
-        var subtitle = '@Model.Subtitle';
-        var dataTable = new google.visualization.DataTable(
-            @Html.Raw(Json.Encode(Model.DataTable))
-        );
+            var title = '@Model.Title';
+            var subtitle = '@Model.Subtitle';
+            var dataTable = new google.visualization.DataTable(
+                @Html.Raw(Json.Encode(Model.DataTable))
+            );
 
-        drawChart('chart1', title, subtitle, dataTable);                
+            drawChart2('chart1', title, subtitle, dataTable);
         });
 
-        function drawChart(elementId, title, subtitle, dataTable) {
+
+    function drawChart2(elementId, title, subtitle, dataTable) {
             var options = {
                 chart: {
                     title: title,
@@ -42,7 +46,7 @@
                 @Html.Raw(Json.Encode(Model.DataTable2))
             );
 
-            drawChart2('chart2', title, subtitle, dataTable);                
+            drawChart2('chart2', title, subtitle, dataTable);
         });
 
         function drawChart2(elementId, title, subtitle, dataTable) {
@@ -59,6 +63,8 @@
 
             chart.draw(dataTable, options);
         }
+
+
 
         $(window).resize(function () {
 
@@ -79,9 +85,9 @@
         <hr />
     </div>
     <div class="clearfix"></div>
-    <div class="col-md-6">
+
         <div id="chart1" class="chart"></div>
-    </div>
+  
 </div>
 <div class="row">
 
@@ -92,10 +98,9 @@
         <hr />
     </div>
     <div class="clearfix"></div>
-    <div class="col-md-6">
         <div id="chart2" class="chart"></div>
-    </div>
 </div>
+
 
 
 
